--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+       
+<script>(function(s){s.dataset.zone='10554114',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+
+
+
+    
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E5ZGPZREXB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -734,3 +740,4 @@
 </script>
 </body>
 </html>
+
