--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 90.6 GB</div>
                     <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
-                    <a href="https://shrinkme.click/Auxf8" target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://otieu.com/4/10554174" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
 
@@ -528,7 +528,7 @@
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 14.3 GB</div>
                     <div class="rating">★ ★ ★ ★ ★ 8.7</div>
-                    <a href="https://shrinkme.click/MXxJQ" target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://otieu.com/4/10554187" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
             
@@ -539,7 +539,7 @@
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 60.5 GB</div>
                     <div class="rating">★ ★ ★ ☆ ☆ 3.3</div>
-                    <a href="https://shrinkme.click/TOukmeF" target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://otieu.com/4/10554190" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
 
@@ -550,7 +550,7 @@
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 70 GB</div>
                     <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
-                    <a href="https://shrinkme.click/hmibvUpV" target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://otieu.com/4/10554194" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
 
@@ -740,4 +740,5 @@
 </script>
 </body>
 </html>
+
 
