--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
        
 <script>(function(s){s.dataset.zone='10554114',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5793634752718248"
+     crossorigin="anonymous"></script>
 
     
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E5ZGPZREXB"></script>
@@ -740,5 +741,6 @@
 </script>
 </body>
 </html>
+
 
 
