--- a/index.html
+++ b/index.html
@@ -37,6 +37,65 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <style>
+.hub-btn-container {
+    text-align: center;
+    margin: 50px 0;
+}
+
+.bw-hub-btn {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    padding: 20px 50px;
+    background: #000; /* Black Background */
+    color: #fff; /* White Text */
+    font-family: 'Orbitron', sans-serif;
+    font-size: 13px;
+    font-weight: 700;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 1px solid #fff; /* White Border */
+    transition: all 0.4s cubic-bezier(0.6, 0.01, 0, 1);
+    cursor: pointer;
+    overflow: hidden;
+}
+
+/* Hover කළාම වෙන දේ */
+.bw-hub-btn:hover {
+    background: #fff; /* පසුබිම සුදු වෙනවා */
+    color: #000; /* අකුරු කළු වෙනවා */
+    letter-spacing: 8px; /* අකුරු අතර පරතරය වැඩි වෙනවා */
+    box-shadow: 0 10px 30px rgba(255, 255, 255, 0.2);
+}
+
+/* බටන් එක ඇතුළේ යන පොඩි ඇනිමේෂන් ලයින් එක */
+.bw-hub-btn::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background: #000;
+    transition: 0.4s;
+}
+
+.bw-hub-btn:hover::after {
+    width: 100%;
+}
+
+.btn-icon {
+    margin-left: 15px;
+    font-size: 14px;
+    transition: 0.4s;
+}
+
+.bw-hub-btn:hover .btn-icon {
+    transform: translateX(10px); /* ඊතලය දකුණට මූව් වෙනවා */
+}
+
+           
         /* CSS Design - Black & White Premium Theme */
         * {
             margin: 0;
@@ -610,6 +669,12 @@
                     </div>
                 </section>
             </div>
+<div class="hub-btn-container">
+    <a href="hub.html" class="bw-hub-btn">
+        <span class="btn-text">ENTER ULTIMATE HUB</span>
+        <span class="btn-icon"><i class="fas fa-chevron-right"></i></span>
+    </a>
+</div>
 
             <a href="store.html" class="more-games-btn" style="width: 100%; border: 2px solid #fff; color: #fff; text-decoration: none; padding: 15px; display: block; text-align: center; font-weight: bold; border-radius: 12px; margin-top: 20px;">See More Games ➔</a>
         </div>    
@@ -741,6 +806,7 @@
 </script>
 </body>
 </html>
+
 
 
 
