--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
             </div>
 <div class="mini-btn-container">
     <a href="hub.html" class="mini-codes-btn">
-        Codes <i class="fas fa-chevron-right"></i>
+        Codes
     </a>
 </div>
 
@@ -781,6 +781,7 @@
 </script>
 </body>
 </html>
+
 
 
 
