--- a/hub.html
+++ b/hub.html
@@ -260,10 +260,10 @@
 
     <footer>
         <div class="social-links">
-            <a href="#"><i class="fab fa-discord"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-reddit-alien"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="X.html"><i class="fab fa-discord"></i></a>
+            <a href="X.html"><i class="fab fa-youtube"></i></a>
+            <a href="X.html"><i class="fab fa-reddit-alien"></i></a>
+            <a href="X.html"><i class="fab fa-github"></i></a>
         </div>
         <p class="footer-text">LANX GAMES &copy; 2024. ALL RIGHTS RESERVED. // SYSTEM INTEGRITY: OPTIMAL</p>
     </footer>
