--- a/index.html
+++ b/index.html
@@ -546,8 +546,8 @@
             <h2 style="text-align: center; margin-bottom: 20px; letter-spacing: 5px; width: 100%; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 25px; font-size: 18px;">Most Download Games</h2>
 
             <div class="game-card">
-                <div class="game-img"><img src="1.jpeg"></div>
-                <div class="game-details">
+                <div class="game-img"><div class="game-img">]
+                <div class="game-details"><img src="1.jpeg" alt="Grand Theft Auto V Free Download Lanx Games"></div>
                     <div class="game-title">Grand Theft Auto V</div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 90.6 GB</div>
@@ -557,7 +557,7 @@
             </div>
 
             <div class="game-card">
-                <div class="game-img"><img src="2.jpeg"></div>
+                <div class="game-img">​<img src="2.jpeg" alt="Red dead redemption2 Free Download Lanx Games"></div>
                 <div class="game-details">
                     <div class="game-title">red dead redemption 2</div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
@@ -568,7 +568,7 @@
             </div>
             
             <div class="game-card">
-                <div class="game-img"><img src="3.jpeg"></div>
+                <div class="game-img"><img src="3.jpeg" alt="Red dead redemption Free Download Lanx Games"></div>​
                 <div class="game-details">
                     <div class="game-title">Red dead redemption </div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
@@ -579,7 +579,7 @@
             </div>
 
             <div class="game-card">
-                <div class="game-img"><img src="4.jpeg"></div>
+                <div class="game-img"><img src="4.jpeg" alt="Cyberpunk 2077 Free Download Lanx Games"></div>
                 <div class="game-details">
                     <div class="game-title">Cyberpunk 2077: Phantom Liberty</div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
@@ -781,6 +781,7 @@
 </script>
 </body>
 </html>
+
 
 
 
