--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 
             <div class="game-card">
                 <div class="game-img"><div class="game-img">]
-                <div class="game-details"><img src="1.jpeg" alt="Grand Theft Auto V Free Download Lanx Games"></div>
+                <div class="game-details"><img src="1.jpeg" alt="Grand Theft Auto V Free Download Lanx Games" />
                     <div class="game-title">Grand Theft Auto V</div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 90.6 GB</div>
@@ -557,10 +557,10 @@
             </div>
 
             <div class="game-card">
-                <div class="game-img">​<img src="2.jpeg" alt="Red dead redemption2 Free Download Lanx Games"></div>
+                <div class="game-img">​<img src="2.jpeg" alt="Red dead redemption2 Free Download Lanx Games">
                 <div class="game-details">
                     <div class="game-title">red dead redemption 2</div>
-                    <p style="font-size: 12px; color: #888;">For PC [Free]</p>
+                    <p style="font-size: 12px; color: #888;">For 
                     <div class="game-info">Size: 14.3 GB</div>
                     <div class="rating">★ ★ ★ ★ ★ 8.7</div>
                     <a href="https://otieu.com/4/10554187" target="_blank" class="download-btn">DOWNLOAD</a>
@@ -568,7 +568,7 @@
             </div>
             
             <div class="game-card">
-                <div class="game-img"><img src="3.jpeg" alt="Red dead redemption Free Download Lanx Games"></div>​
+                <div class="game-img"><img src="3.jpeg" alt="Red dead redemption Free Download Lanx Games">​
                 <div class="game-details">
                     <div class="game-title">Red dead redemption </div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
@@ -579,7 +579,7 @@
             </div>
 
             <div class="game-card">
-                <div class="game-img"><img src="4.jpeg" alt="Cyberpunk 2077 Free Download Lanx Games"></div>
+                <div class="game-img"><img src="4.jpeg" alt="Cyberpunk 2077 Free Download Lanx Games">
                 <div class="game-details">
                     <div class="game-title">Cyberpunk 2077: Phantom Liberty</div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
@@ -781,6 +781,7 @@
 </script>
 </body>
 </html>
+
 
 
 
