--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
             </div>
 
             <div class="game-card">
-                <div class="game-img"><img src="2.jpeg"></div>
+                <div class="game-img"><img src="2.jpeg" alt="Red Dead Redemption 2 PC Free Download - Lanx Games.lk"> </div>
                 <div class="game-details">
                     <div class="game-title">red dead redemption 2</div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
@@ -568,7 +568,7 @@
             </div>
             
             <div class="game-card">
-                <div class="game-img"><img src="3.jpeg"></div>
+                <div class="game-img"><img src="3.jpeg" alt="Red Dead Redemption 1 PC Game Download - Lanx Games.lk"> </div>
                 <div class="game-details">
                     <div class="game-title">Red dead redemption </div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
@@ -579,7 +579,7 @@
             </div>
 
             <div class="game-card">
-                <div class="game-img"><img src="4.jpeg"></div>
+                <div class="game-img"><img src="4.jpeg" alt="Cyberpunk 2077 Phantom Liberty Free Download - Lanx Games.lk"></div>
                 <div class="game-details">
                     <div class="game-title">Cyberpunk 2077: Phantom Liberty</div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
@@ -781,6 +781,7 @@
 </script>
 </body>
 </html>
+
 
 
 
