--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-    <link rel="icon" type="image/png" href="e.png">
-    <link rel="apple-touch-icon" href="e.png">
+<link rel="icon" type="image/png" href="logo.png">
+<link rel="apple-touch-icon" href="logo.png">
+
     
     <title>Lanx Games</title> 
 
@@ -781,6 +782,7 @@
 </script>
 </body>
 </html>
+
 
 
 
